@@ -4019,6 +4019,13 @@ pcap_setnonblock_mmap(pcap_t *p, int nonblock, char *errbuf)
 	struct pcap_linux *handlep = p->priv;
 
 	/*
+	 * Set the file descriptor to non-blocking mode, as we use
+	 * it for sending packets.
+	 */
+	if (pcap_setnonblock_fd(p, nonblock, errbuf) == -1)
+		return -1;
+
+	/*
 	 * Map each value to their corresponding negation to
 	 * preserve the timeout value provided with pcap_set_timeout.
 	 */
